; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_license_guc.c_current_license_can_downgrade_to_apache.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_license_guc.c_current_license_can_downgrade_to_apache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@downgrade_to_apache_enabled = common dso_local global i64 0, align 8
@ts_guc_license_key = common dso_local global i32* null, align 8
@tsl_handle = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @current_license_can_downgrade_to_apache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @current_license_can_downgrade_to_apache() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @downgrade_to_apache_enabled, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %17

5:                                                ; preds = %0
  %6 = load i32*, i32** @ts_guc_license_key, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %5
  %9 = call i64 (...) @TS_CURRENT_LICENSE_IS_APACHE_ONLY()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %8, %5
  %12 = load i32*, i32** @tsl_handle, align 8
  %13 = icmp eq i32* %12, null
  br label %14

14:                                               ; preds = %11, %8
  %15 = phi i1 [ false, %8 ], [ %13, %11 ]
  %16 = zext i1 %15 to i32
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %14, %4
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i64 @TS_CURRENT_LICENSE_IS_APACHE_ONLY(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
